@@ -47,6 +47,7 @@ gem 'cassandra'
 gem 'httpi'
 #gem 'hbaserb'
 #gem 'localmemcache'
+alternatives :mri => 'tdb'
 alternatives :mri => 'leveldb-ruby'
 alternatives :mri => 'tokyocabinet'
 alternatives :mri => 'memcached', :jruby => 'jruby-memcached'
