@@ -2,6 +2,7 @@ master
 
 * Transformer: fix truncate
 * RestClient: raise error if store fails
+* Adapters::TDB added
 
 0.7.3
 
